--- a/index.html
+++ b/index.html
@@ -29,14 +29,32 @@
                     <li>Pricing </li>
                     <li>Blog </li>
                 </ul>
-                <div class="ms-auto align-items-center flex">
-                    <button>conteact</button>
+                <div class="ms-auto align-items-center flex ">
+                    <button class="btn border">conteact</button>
                 </div>
 
             </div>
         </div>
     </nav>
     <!-- start header -->
+    <div class="header ">
+        <div class="container flex  justify-content-between">
+
+
+            <div class="col pt-80" data-aos="fade-right">
+                <span class="text-secondary">Gabriel Pires</span>
+                <h1 class="text-white">The Simple,
+                    Clean Design</h1>
+                <p class="text-white ">Agency provides a full service range including technical skills, design,
+                    business
+                    understanding.</p>
+                <button class="bg-secondary btn text-white btn-rounded upper">See My Work</button>
+            </div>
+            <div class="col" data-aos="fade-left">
+                <img src="./imgs/pic.png" />
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
