add services comp

--- a/index.html
+++ b/index.html
@@ -55,6 +55,58 @@
             </div>
         </div>
     </div>
+    <!-- Services -->
+    <div class="services bg-offwhite py-100 upper" data-aos="fade-in">
+        <div class="container">
+            <h3 class="text-center text-secondary">Service</h3>
+            <h1 class="text-center mx-auto w-25 capitalize">How I Can Help
+                You With</h1>
+            <div class="flex">
+                <div class="box" data-aos="fade-right">
+                    <div class="comb flex">
+                        <div class="bg-secondary icon flex justify-content-center align-items-center ">
+                            <img src=" ./imgs/Combined Shape.png" />
+                        </div>
+                        <p class="ps-5 capitalize">Design</p>
+                    </div>
+                    <p class="w-80">Agency is a business you hire to outsource your digital marketing efforts, instead
+                        of handling
+                        in-house.</p>
+                    <div>
+                        <div class="flex ">
+                            <div
+                                class="icon bg-white text-center flex align-items-center justify-content-center text-secondary fs-bold">
+                                <div>+</div>
+
+                            </div>
+                            <div class="learnMore">Learn More</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="box" data-aos="fade-left">
+                    <div class="comb flex">
+                        <div class="bg-secondary icon flex justify-content-center align-items-center ">
+                            <img src="./imgs/post Shape.png" />
+                        </div>
+                        <p class="ps-5 capitalize">Development</p>
+                    </div>
+                    <p class="w-80">Agency is a business you hire to outsource your digital marketing efforts, instead
+                        of handling
+                        in-house.</p>
+                    <div class="flex  ">
+                        <div
+                            class="icon bg-white text-center flex align-items-center justify-content-center text-secondary fs-bold">
+                            <div>+</div>
+
+                        </div>
+                        <div class="learnMore">Learn More</div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
