add Portfolio comp

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <div>
                         <div class="flex ">
                             <div
-                                class="icon bg-white text-center flex align-items-center justify-content-center text-secondary fs-bold">
+                                class="icon bg-white text-center flex align-items-center justify-content-center text-secondary fw-bold">
                                 <div>+</div>
 
                             </div>
@@ -103,6 +103,54 @@
                     </div>
                 </div>
 
+            </div>
+        </div>
+    </div>
+    <!-- Portfolio -->
+    <div class="Portfolio py-100 bg-dark">
+        <div class="container">
+            <p class=" text-secondary">Portfolio</p>
+            <div class="flex justify-content-between">
+                <h1 class="fw-bold fs-20 text-white">Last Weak</h1>
+                <button class="btn bg-transparent text-white border">Explore More</button>
+            </div>
+            <div class="flex justify-content-between">
+                <div class="events postion-relative">
+                    <div class="img">
+                        <img src="./imgs/Bitmap.png" />
+                    </div>
+                    <div class="postion-absolute text-content h-100 w-100  ps-5">
+                        <button class="btn btn-rounded w-25">
+                            Design
+                        </button>
+                        <h2 class="fw-bold text-white w-100">SOFA</h2>
+                    </div>
+
+                </div>
+                <div class="events postion-relative">
+                    <div class="img">
+                        <img src="./imgs/Bitmap2.png" />
+                    </div>
+                    <div class="postion-absolute text-content h-100 w-100  ps-5">
+                        <button class="btn btn-rounded w-25">
+                            Branding
+                        </button>
+                        <h2 class="fw-bold text-white w-100">SOFA</h2>
+                    </div>
+
+                </div>
+                <div class="events postion-relative">
+                    <div class="img">
+                        <img src="./imgs/Bitmap1.png" />
+                    </div>
+                    <div class="postion-absolute text-content h-100 w-100  ps-5">
+                        <button class="btn btn-rounded w-25">
+                            Illustration
+                        </button>
+                        <h2 class="fw-bold text-white w-100">SOFA</h2>
+                    </div>
+
+                </div>
             </div>
         </div>
     </div>
