--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <button class="btn bg-transparent text-white border">Explore More</button>
             </div>
             <div class="flex justify-content-between">
-                <div class="events postion-relative">
+                <div class="events postion-relative" data-aos="fade-right">
                     <div class="img">
                         <img src="./imgs/Bitmap.png" />
                     </div>
@@ -127,7 +127,7 @@
                     </div>
 
                 </div>
-                <div class="events postion-relative">
+                <div class="events postion-relative" data-aos="fade-in">
                     <div class="img">
                         <img src="./imgs/Bitmap2.png" />
                     </div>
@@ -139,7 +139,7 @@
                     </div>
 
                 </div>
-                <div class="events postion-relative">
+                <div class="events postion-relative" data-aos="fade-left">
                     <div class="img">
                         <img src="./imgs/Bitmap1.png" />
                     </div>
@@ -154,7 +154,56 @@
             </div>
         </div>
     </div>
+    <!-- info -->
+    <div class="info bg-offwhite">
+        <div class="container ">
+            <div class="flex justify-content-between  py-100">
+                <div class="col w-40" data-aos="fade-right">
+                    <img src="./imgs/info.png" />
+                </div>
+                <div class="col w-40 pt-80" data-aos="fade-left">
+                    <p class=" text-secondary">Gabriel Pires</p>
+                    <h1 class="w-50">
+                        Professional
+                        Web Designer
+                    </h1>
+                    <h3>Provides a full service range</h3>
+                    <p style="color: #391400;">Ability to put themselves in the merchant's shoes. It is meant to partner
+                        on
+                        the long run, and work
+                        as an extension of the merchant's team.</p>
+                    <button class="btn bg-white upper">About Me</button>
+                </div>
+            </div>
+            <div class="flex py-80">
+                <div class="box w-50" data-aos="fade-right">
+                    <div class=" flex w-100 py-10 px-10">
+                        <div
+                            class="icon bg-secondary text-center flex align-items-center justify-content-center text-secondary fs-bold">
+                            <img src="./imgs/expreienceIcon.png" />
+                        </div>
+                        <div class="ps-5">
+                            <h1 class="set">42%</h1>
+                            <span>Projects Done</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="box w-50" data-aos="fade-left">
+                    <div class=" flex w-100 py-10 px-10">
+                        <div
+                            class="icon bg-secondary text-center flex align-items-center justify-content-center text-secondary fs-bold">
+                            <img src="./imgs/post Shape.png" />
+                        </div>
+                        <div class="ps-5">
+                            <h1 class="set">73+</h1>
+                            <span>Projects Done</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+        </div>
+    </div>
 </body>
 
 </html>
