--- a/index.html
+++ b/index.html
@@ -12,11 +12,24 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./responsive.css">
     <script src="./main.js" defer></script>
     <title>Document</title>
 </head>
 
 <body>
+    <div class="layout" style="--i:1;" id="layout">
+        <div class="looding" style="--i:2;">
+            <div class="looding" style="--i:3;">
+                <div class="looding" style="--i:4;">
+                    <div class="looding" style="--i:5;"></div>
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
     <nav>
         <div class="container">
             <div class="flex w-100">
@@ -201,7 +214,6 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 </body>
