add Features comp

--- a/index.html
+++ b/index.html
@@ -216,6 +216,28 @@
             </div>
         </div>
     </div>
+    <!-- Features -->
+    <div class="Features py-100 bg-dark">
+        <div class="container">
+            <div class="grid-container">
+                <div>
+                    <p class=" text-secondary">Features</p>
+                    <h1 class="text-white fs-70">Give Your Site
+                        A New Look</h1>
+                    <p class="text-white fs-20">Service range including technical skills, design, business
+                        understanding.</p>
+                    <ul>
+                        <li class="py-10">Range including technical skills</li>
+                        <li class="py-10">Business understanding</li>
+                        <li class="py-10">Partner on the long run</li>
+                    </ul>
+                </div>
+                <div style="overflow:hidden" data-aos="fade-left">
+                    <img src="./imgs/featurePic.png" />
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
