add get start comp and make web site responsive

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
             <div class="col pt-80" data-aos="fade-right">
                 <span class="text-secondary">Gabriel Pires</span>
-                <h1 class="text-white">The Simple,
+                <h1 class="text-white ff-extra-bold">The Simple,
                     Clean Design</h1>
                 <p class="text-white ">Agency provides a full service range including technical skills, design,
                     business
@@ -123,7 +123,7 @@
     <div class="Portfolio py-100 bg-dark">
         <div class="container">
             <p class=" text-secondary">Portfolio</p>
-            <div class="flex justify-content-between">
+            <div class="flex justify-content-between py-10">
                 <h1 class="fw-bold fs-20 text-white">Last Weak</h1>
                 <button class="btn bg-transparent text-white border">Explore More</button>
             </div>
@@ -220,7 +220,7 @@
     <div class="Features py-100 bg-dark">
         <div class="container">
             <div class="grid-container">
-                <div>
+                <div data-aos="fade-right">
                     <p class=" text-secondary">Features</p>
                     <h1 class="text-white fs-70">Give Your Site
                         A New Look</h1>
@@ -237,6 +237,27 @@
                 </div>
             </div>
         </div>
+    </div>
+    <!-- get started -->
+    <div class="getSarted py-80  postion-relative" style="background-color:#F9E5DA ;">
+        <div class="container">
+            <div class="gift"><img src="./imgs/gift.png" /></div>
+            <div class="grid-container ">
+                <div class="pt-80 " data-aos="fade-right">
+                    <p class=" text-secondary"> Get Started</p>
+                    <p class="w-40" style="line-height: 25px;">I Help Companies
+                        Move Faster</p>
+                    <button class="btn bg-secondary text-white">Contact Me</button>
+                </div>
+                <div class="pt-80" style="line-height: 28px;color: rgba(57,20,0,.64);" data-aos="fade-out">
+                    <p>Put themselves in the merchant's shoes. It is meant to partner on the long run.</p>
+                </div>
+                <div data-aos="fade-left">
+                    <img src="./imgs/Group 1.png" class="w-100">
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
 </body>
 
