add swiper comp

--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
             </div>
         </div>
     </nav>
+
     <!-- start header -->
-    <div class="header ">
+    <div class="header py-100">
         <div class="container flex  justify-content-between">
 
 
@@ -258,6 +259,71 @@
             </div>
         </div>
     </div>
+    </div>
+    <!-- swiper -->
+    <div class="swiper bg-offwhite py-100">
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide">
+                <div class="stars"></div>
+                <p class="" style="color: #391400;">
+                    A digital agency is a business you hire to outsource your digital marketing efforts, instead of
+                    handling in-house. They can provide your business with a variety of digital solutions.
+                </p>
+                <div class="grid-container">
+                    <div class="img">
+                        <img src="./imgs/person2.png" />
+                    </div>
+                    <div class="text-content">
+                        <h2 class="set">Alan Martí</h2>
+                        <span>Meta Inc.</span>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="stars"></div>
+                <p class="" style="color: #391400;">
+                    A digital agency is a business you hire to outsource your digital marketing efforts, instead of
+                    handling in-house. They can provide your business with a variety of digital solutions.
+                </p>
+                <div class="grid-container">
+                    <div class="img">
+                        <img src="./imgs/person1.png" />
+                    </div>
+                    <div class="text-content">
+                        <h2 class="set">Alan Martí</h2>
+                        <span>Meta Inc.</span>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="stars"></div>
+                <p class="" style="color: #391400;">
+                    A digital agency is a business you hire to outsource your digital marketing efforts, instead of
+                    handling in-house. They can provide your business with a variety of digital solutions.
+                </p>
+                <div class="grid-container">
+                    <div class="img">
+                        <img src="./imgs/person3.png" />
+                    </div>
+                    <div class="text-content ">
+                        <h3 class="set">Alan Martí</h3>
+                        <span>Meta Inc.</span>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <!-- If we need pagination -->
+        <div class="swiper-pagination"></div>
+
+        <!-- If we need navigation buttons -->
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+
+        <!-- If we need scrollbar -->
+        <div class="swiper-scrollbar"></div>
     </div>
 </body>
 
