--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -36,18 +39,22 @@
                 <div class="logo">
                     <img src="./imgs/logo.png" />
                 </div>
-                <ul class="justify-content-between flex">
-                    <li>About</li>
-                    <li>Services</li>
-                    <li>Pricing </li>
-                    <li>Blog </li>
-                </ul>
-                <div class="ms-auto align-items-center flex ">
-                    <button class="btn border">conteact</button>
+                <div class="ul flex justify-content-around w-100">
+                    <ul class="justify-content-between flex">
+                        <li>About</li>
+                        <li>Services</li>
+                        <li>Pricing </li>
+                        <li>Blog </li>
+                    </ul>
+                    <div class="ms-auto align-items-center flex ">
+                        <button class="btn border">conteact</button>
+                    </div>
                 </div>
+
 
             </div>
         </div>
+        <div class="iconNav"><i class="fa-solid fa-bars"></i></div>
     </nav>
 
     <!-- start header -->
@@ -128,7 +135,7 @@
                 <h1 class="fw-bold fs-20 text-white">Last Weak</h1>
                 <button class="btn bg-transparent text-white border">Explore More</button>
             </div>
-            <div class="flex justify-content-between">
+            <div class="flex justify-content-between flex-wrap">
                 <div class="events postion-relative" data-aos="fade-right">
                     <div class="img">
                         <img src="./imgs/Bitmap.png" />
@@ -324,6 +331,68 @@
 
         <!-- If we need scrollbar -->
         <div class="swiper-scrollbar"></div>
+    </div>
+    <!-- Faq -->
+    <div class="faq py-100 bg-dark">
+        <div class="container">
+            <div class="grid-container">
+                <div>
+                    <span class=" text-secondary">Faq</span>
+                    <h1 class="text-white w-50">Frequently Asked
+                        Questions</h1>
+                    <p class="w-80" style="color: rgba(255,255,255,.64);line-height: 30px;">A digital agency is a
+                        business you hire to
+                        outsource your
+                        digital marketing efforts,
+                        instead of handling in-house.</p>
+                    <span class="text-white">Contact Me</span>
+                </div>
+                <div class="dropMenu">
+                    <div class="box active">
+                        <div class="text-white fw-bold" style="line-height: 30px;">Hire to outsource your digital</div>
+                        <div class="dropMenu_icon flex align-items-center justify-content-center"><i
+                                class="fa-solid fa-caret-down"></i></div>
+                        <p class="text-white py-10 drop-box" style="line-height: 25px;">Digital marketing efforts,
+                            instead of
+                            handling in-house. They can
+                            provide your business with a variety of digital solutions to promote your product or service
+                            online and help you hit your marketing goals and grow your business.</p>
+                    </div>
+                    <div class="box ">
+                        <div class="text-white fw-bold" style="line-height: 30px;">Hire to outsource your digital</div>
+                        <div class="dropMenu_icon flex align-items-center justify-content-center"><i
+                                class="fa-solid fa-caret-down"></i></div>
+                        <p class="text-white py-10 drop-box" style="line-height: 25px;">Digital marketing efforts,
+                            instead of
+                            handling in-house. They can
+                            provide your business with a variety of digital solutions to promote your product or service
+                            online and help you hit your marketing goals and grow your business.</p>
+                    </div>
+                    <div class="box ">
+                        <div class="text-white fw-bold" style="line-height: 30px;">Hire to outsource your digital</div>
+                        <div class="dropMenu_icon flex align-items-center justify-content-center"><i
+                                class="fa-solid fa-caret-down"></i></div>
+                        <p class="text-white py-10 drop-box" style="line-height: 25px;">Digital marketing efforts,
+                            instead of
+                            handling in-house. They can
+                            provide your business with a variety of digital solutions to promote your product or service
+                            online and help you hit your marketing goals and grow your business.</p>
+                    </div>
+                    <div class="box ">
+                        <div class="text-white fw-bold" style="line-height: 30px;">Hire to outsource your digital</div>
+                        <div class="dropMenu_icon flex align-items-center justify-content-center"><i
+                                class="fa-solid fa-caret-down"></i></div>
+                        <p class="text-white py-10 drop-box" style="line-height: 25px;">Digital marketing efforts,
+                            instead of
+                            handling in-house. They can
+                            provide your business with a variety of digital solutions to promote your product or service
+                            online and help you hit your marketing goals and grow your business.</p>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
