--- a/index.html
+++ b/index.html
@@ -394,6 +394,29 @@
             </div>
         </div>
     </div>
+    <!-- images box -->
+
+    <div class="grid-container images-box">
+        <div class="box">
+            <img src="./imgs/box1.png" />
+        </div>
+        <div class="box">
+            <img src="./imgs/box2.png" />
+        </div>
+        <div class="box">
+            <img src="./imgs/box3.png" />
+        </div>
+        <div class="box">
+            <img src="./imgs/box4.png" />
+        </div>
+        <div class="box">
+            <img src="./imgs/box5.png" />
+        </div>
+        <div class="box">
+            <img src="./imgs/box6.png" />
+        </div>
+    </div>
+
 </body>
 
 </html>
