--- a/index.html
+++ b/index.html
@@ -416,7 +416,51 @@
             <img src="./imgs/box6.png" />
         </div>
     </div>
+    <!-- footer -->
+    <div class="footer py-100 bg-dark">
+        <div class="grid-container container py-80 " style="border-bottom:1px solid #3A3C56">
+            <div>
+                <h2 class="text-white bold">Personal</h2>
+            </div>
+            <div>
+                <ul>
+                    <h3 class=" text-secondary">MENU</h3>
+                    <li>About</li>
+                    <li>Services</li>
+                    <li>Blog</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <h3 class="text-secondary">Service</h3>
+                    <li>Design</li>
+                    <li>Development</li>
+                    <li>Marketing</li>
+                    <li>See More</li>
+                </ul>
+            </div>
+            <div class="grid-container box-icon" style="grid-template-columns: repeat(3,80px);margin: auto;">
+                <div class="icon bg-secondary flex align-items-center justify-content-center">
+                    <i class="fa-brands fa-facebook-f text-white fw-bold"></i>
+                </div>
+                <div class="icon bg-secondary flex align-items-center justify-content-center">
+                    <i class="fa-brands fa-twitter text-white fw-bold"></i>
+                </div>
+                <div class="icon bg-secondary flex align-items-center justify-content-center">
+                    <i class="fa-brands fa-instagram text-white fw-bold"></i>
+                </div>
+            </div>
 
+        </div>
+        <div class="container " style="margin-top: 40px">
+            <div class="gird-container sub-footer">
+                <p style="color: rgba(255,255,255,.6);">Copyright © 2022 Laaqiq. All Rights Reserved.</p>
+                <div class="text-white">Terms of Use</div>
+                <div class="text-white">Privacy Policy</div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
