set navbar and make it responsive

--- a/index.html
+++ b/index.html
@@ -31,37 +31,41 @@
             </div>
 
         </div>
-
     </div>
-    <nav>
-        <div class="container">
-            <div class="flex w-100">
-                <div class="logo">
-                    <img src="./imgs/logo.png" />
+    <nav class="postion-absolute  w-100">
+        <div class="container postion-relative flex">
+            <div class="logo">
+                <img src="./imgs/logo.png" />
+            </div>
+            <div class="flex ul">
+                <ul class="text-white">
+                    <li>
+                        About
+                    </li>
+                    <li>
+                        Services
+                    </li>
+                    <li>
+                        Pricing
+                    </li>
+                    <li>
+                        Blog
+                    </li>
+                </ul>
+                <div class="flex align-items-center justify-content-center">
+                    <button class="btn border bg-transparent text-white">Contact</button>
                 </div>
-                <div class="ul flex justify-content-around w-100">
-                    <ul class="justify-content-between flex">
-                        <li>About</li>
-                        <li>Services</li>
-                        <li>Pricing </li>
-                        <li>Blog </li>
-                    </ul>
-                    <div class="ms-auto align-items-center flex ">
-                        <button class="btn border">conteact</button>
-                    </div>
-                </div>
-
-
             </div>
         </div>
         <div class="iconNav"><i class="fa-solid fa-bars"></i></div>
+
     </nav>
+
+
 
     <!-- start header -->
     <div class="header py-100">
         <div class="container flex  justify-content-between">
-
-
             <div class="col pt-80" data-aos="fade-right">
                 <span class="text-secondary">Gabriel Pires</span>
                 <h1 class="text-white ff-extra-bold">The Simple,
